# adventofcode

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  aoc2015.cmake  aoc2016.cmake  aoc2017.cmake  aoc2018.cmake  aoc2020.cmake  aoc_common.cmake  cmake_readme.txt  generate_year.py
2015/day01/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day02/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day03/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day04/: CMakeLists.txt  main.cpp  test.h
2015/day05/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day06/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day07/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day08/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day09/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day10/: CMakeLists.txt  main.cpp  test.h
2015/day11/: CMakeLists.txt  main.cpp  test.h
2015/day12/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day13/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day14/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day15/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day16/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day17/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day18/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day19/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day20/: CMakeLists.txt  main.cpp  test.h
2015/day21/: CMakeLists.txt  main.cpp  test.h
2015/day22/: CMakeLists.txt  main.cpp  test.h
2015/day23/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day24/: CMakeLists.txt  input.in  main.cpp  test.h
2015/day25/: CMakeLists.txt  main.cpp  test.h
2016/day01/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day02/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day03/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day04/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day05/: CMakeLists.txt  main.cpp  test.h
2016/day06/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day07/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day08/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day09/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day10/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day11/: CMakeLists.txt  main.cpp  test.h
2016/day12/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day13/: CMakeLists.txt  main.cpp  test.h
2016/day14/: CMakeLists.txt  main.cpp  test.h
2016/day15/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day16/: CMakeLists.txt  main.cpp  test.h
2016/day17/: CMakeLists.txt  main.cpp  test.h
2016/day18/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day19/: CMakeLists.txt  main.cpp  test.h
2016/day19/tests/: TestClass.cpp  TestClass.h
2016/day20/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day21/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day22/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day23/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day24/: CMakeLists.txt  input.in  main.cpp  test.h
2016/day25/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day01/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day02/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day03/: CMakeLists.txt  main.cpp  test.h
2017/day04/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day05/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day06/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day07/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day08/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day09/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day10/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day11/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day12/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day13/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day14/: CMakeLists.txt  main.cpp  test.h
2017/day15/: CMakeLists.txt  main.cpp  test.h
2017/day16/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day17/: CMakeLists.txt  main.cpp  test.h
2017/day18/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day19/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day20/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day21/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day22/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day23/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day24/: CMakeLists.txt  input.in  main.cpp  test.h
2017/day25/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day01/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day02/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day03/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day04/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day05/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day06/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day07/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day08/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day09/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day10/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day11/: CMakeLists.txt  main.cpp  test.h
2018/day12/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day13/: CMakeLists.txt  input.in  main.cpp  test.h
2018/day14/: CMakeLists.txt  main.cpp  (+1 more)
common/: CMakeLists.txt  test.cpp
common/cmake/: gtest.cmake  openssl.cmake
common/include/: StringToIntMap.h  dir.h  direction.h  file.h  grid.h  intcode.h  math_util.h  md5.h  point.h  ranges.h  string_util.h  types.h  utilities.h  verticalhexgrid.h
common/input/: test.in  testArrayInt.in  testArrayIntWithSeparator.in
common/src/: StringToIntMap.cpp  file.cpp  math_util.cpp  md5.cpp  string_util.cpp  utilities.cpp
common/tests/: FileTest.cpp  FileTest.h  GridTest.cpp  GridTest.h  IntCodeTest.cpp  IntCodeTest.h  MathTest.cpp  MathTest.h  RangesTest.h  RangesTests.cpp  StringTest.cpp  StringTest.h  StringToIntMapTest.cpp  StringToIntMapTest.h  UtilitiesTest.cpp  UtilitiesTest.h  VerticalHexGridTest.cpp  VerticalHexGridTest.h  md5Test.cpp  md5Test.h
(+1472 files in other folders)
